--- a/encyclopedia/templates/encyclopedia/page.html
+++ b/encyclopedia/templates/encyclopedia/page.html
@@ -9,7 +9,7 @@
     {{ content|safe }}
 
 
-<p><a href="{% url 'enc:edit'%}"> Редактировать </a></p>
+<p><a href="{% url 'enc:edit' title%}"> Редактировать </a></p>
 
 <p><a href="{% url 'enc:index' %}"> Вернуться на главную страницу </a></p>
 
