--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -6,10 +6,11 @@
 
 {% block body %}
 <h3> Редактор текста: </h3>
-    <form action="{% url 'enc:edit' %}" method="post">
+    <form action="" method="post">
         {% csrf_token %}
+        <h1> {{title}} </h1>
 
-        {{ form }}
+        <textarea name="text"> {{text}}  </textarea>
 
         <p><input type="submit"></p>
     </form>
